[View] - Design adjustments

--- a/TeamBuddy.App/Views/HomeCreateTeamView.xaml
+++ b/TeamBuddy.App/Views/HomeCreateTeamView.xaml
@@ -29,9 +29,9 @@
         <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Team Description:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FF444343" FontFamily="Ink Free" FontWeight="Bold"/>
         <TextBox Grid.Row="0" Grid.Column="1" Height="30" Margin="0,0,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
-                 Text="{Binding NewTeam.Name}" FontStyle="Italic" Opacity="0.6"/>
+                 Text="{Binding NewTeam.Name}" Background="Transparent" Foreground="Black" FontSize="18" FontWeight="Bold"  FontFamily="Ink Free"  Opacity="0.8"/>
         <TextBox Grid.Row="1" Grid.Column="1"  Height="30" Margin="0,0,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
-                 Text="{Binding NewTeam.Description}" TextDecorations="{x:Null}" Opacity="0.6"/>
+                 Text="{Binding NewTeam.Description}" TextDecorations="{x:Null}" Background="Transparent" Foreground="Black" FontSize="18" FontWeight="Bold"  FontFamily="Ink Free"  Opacity="0.8"/>
         <StackPanel Grid.Column="0"  Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="150" Height="40" Margin="0,0,0,0" Name="ButtonSwitch2" FontSize="15" VerticalAlignment="Center" Content="Create New Team" Opacity="0.6" Background="#FFDDDDDD" 
                     Command="{Binding CreateNewTeamCommand}" Cursor="Hand"/>
