--- a/TeamBuddy.App/Views/SelectedTeamCreatePostView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamCreatePostView.xaml
@@ -9,7 +9,7 @@
              d:DataContext="{d:DesignInstance viewModels:SelectedTeamCreatePostViewModel}"
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamCreatePostViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Visibility="{Binding NewPost, Converter={StaticResource NullToVisibilityConverter}}">
+    <Grid Width="650" Height="180" Margin="0,0,0,32" Visibility="{Binding NewPost, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="45"/>
             <RowDefinition Height="45"/>
@@ -25,10 +25,10 @@
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FF444343"/>
         <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Team Description:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FF444343" FontFamily="Ink Free" FontWeight="Bold"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Height="30" Margin="0,0,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
-                 Text="" FontStyle="Italic" Opacity="0.6"/>
-        <TextBox Grid.Row="1" Grid.Column="1"  Height="30" Margin="0,0,0,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
-                 Text="" TextDecorations="{x:Null}" Opacity="0.6"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Height="30" Margin="42,0" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
+                 Text="" Background="Transparent" Foreground="Black" FontSize="18" FontWeight="Bold"  FontFamily="Ink Free"  Opacity="0.8"/>
+        <TextBox Grid.Row="1" Grid.Column="1"  Height="30" Margin="42,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
+                 Text="" TextDecorations="{x:Null}" Background="Transparent" Foreground="Black" FontSize="18" FontWeight="Bold"  FontFamily="Ink Free"  Opacity="0.8"/>
         <StackPanel Grid.Column="0"  Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="150" Height="40" Margin="0,0,0,0" Name="ButtonSwitch2" FontSize="15" VerticalAlignment="Center" Content="Create New Post" Opacity="0.6" Background="#FFDDDDDD" 
                     Cursor="Hand"/>
