--- a/TeamBuddy.App/Views/HomeUserDetailView.xaml
+++ b/TeamBuddy.App/Views/HomeUserDetailView.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance viewModels:HomeUserDetailViewModel}"
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeUserDetailViewModel}"
-             d:DesignHeight="600" d:DesignWidth="800">
+             d:DesignHeight="800" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1.5*"/>
@@ -17,6 +17,10 @@
             <RowDefinition Height="10"/>
             
         </Grid.RowDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.Row="0"  Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 0" >
+            <Image Source="Images/TeambuddyHomeImage.png" Margin="0,25,0,0" />
+        </StackPanel>
 
         <Grid Grid.Row="1" Margin="0 20 0 20">
             <Grid.RowDefinitions>
