--- a/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
@@ -10,12 +10,12 @@
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid >
-        <ScrollViewer>
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Background="#14FFFFFF" >
         <ItemsControl  x:Name="PostsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Posts}" Margin="0 0 0 0" Panel.ZIndex="-1">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <Label Content="{Binding Title}" FontSize="30" FontWeight="Bold" Opacity="1" FontFamily="Bell MT"  />
+                    <StackPanel Margin="5,0">
+                        <Label Content="{Binding Title}" FontSize="30" FontWeight="Bold" Foreground="#232323" Opacity="1" FontFamily="Bell MT"  />
                         <TextBlock Text="{Binding Text}" TextWrapping="Wrap" FontSize="20" Opacity="0.8" FontFamily="Arial"/>
                         <Grid Margin="0 10 0 0">
                             <Grid.RowDefinitions>
@@ -38,18 +38,17 @@
                         </Grid>
                         <ItemsControl  x:Name="CommentsListBox" Background="Transparent" Width="Auto" 
                                  ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel.Comments}" Margin="80 0 0 0" >
-                            <ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemTemplate >
                                 <DataTemplate>
-
-                                    <StackPanel>
-                                        <TextBlock Text="{Binding Text}" TextWrapping="Wrap" FontSize="20" Opacity="0.8" FontFamily="Arial"/>
+                                        <StackPanel Margin="0,5" Background="#41464646">
+                                        <TextBlock  Margin="4,5,4,0" Text="{Binding Text}" TextWrapping="Wrap" FontSize="20" Opacity="0.8" FontFamily="Arial"/>
                                         <Grid Margin="0 10 0 0">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
-                                            <TextBlock Grid.Row="0" Text="{Binding CommentAdditionTime}" FontSize="12" Opacity="0.8"/>
-                                            <TextBlock Grid.Row="1" Text="xmjaso00" FontSize="12" Opacity="0.8"/>
+                                            <TextBlock Margin="4,5,4,0" Grid.Row="0" Text="{Binding CommentAdditionTime}" FontSize="12" Opacity="0.7"/>
+                                            <TextBlock Margin="4,5,4,0" Grid.Row="1" Text="xmjaso00" FontSize="12" Opacity="0.7"/>
                                         </Grid>
                                         <Grid Margin="0 10 0 0">
                                             <Grid.ColumnDefinitions>
