--- a/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
+++ b/TeamBuddy.App/Views/SelectedTeamPostListView.xaml
@@ -11,7 +11,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid >
         <ScrollViewer VerticalScrollBarVisibility="Auto" Background="#14FFFFFF" >
-        <ItemsControl  x:Name="PostsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Posts}" Margin="0 0 0 0" Panel.ZIndex="-1">
+        <ItemsControl  x:Name="PostsListBox" Background="Transparent" Width="Auto" ItemsSource="{Binding Posts ,UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 0" Panel.ZIndex="-1">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5,0">
@@ -31,13 +31,15 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
+                                <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                                <Button Content="Show Author" Grid.Column="0" Command="{Binding Path=DataContext.ShowAuthorCommand, ElementName=PostsListBox}" CommandParameter="{Binding Path=User.Username}"/>
-                            <Button Content="Add Comment" Grid.Column="1"/>
-                            <Button Content="Delete Post" Grid.Column="2"/>
+                            <Button Content="Show Author" Grid.Column="0" Command="{Binding Path=DataContext.ShowAuthorCommand, ElementName=PostsListBox}" CommandParameter="{Binding Path=User.Username}"/>
+                            <Button Content="Show Comments" Grid.Column="1" Command="{Binding Path=DataContext.ShowCommentsCommand, ElementName=PostsListBox}" CommandParameter="{Binding Path=Id}"/>
+                            <Button Content="Add Comment" Grid.Column="2" Command="{Binding Path=DataContext.AddCommentCommand, ElementName=PostsListBox}" CommandParameter="{Binding Path=Id}"/>
+                            <Button Content="Delete Post" Grid.Column="3" Command="{Binding Path=DataContext.DeletePostCommand, ElementName=PostsListBox}" CommandParameter="{Binding Path=Id}" Foreground="Red"/>
                         </Grid>
-                        <ItemsControl  x:Name="CommentsListBox" Background="Transparent" Width="Auto" 
-                                 ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel.Comments}" Margin="80 0 0 0" >
+                            <ItemsControl  x:Name="CommentsListBox" Background="Transparent" Width="Auto" 
+                                 ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=SelectedTeamPostListViewModel.Comments, UpdateSourceTrigger=PropertyChanged}" Margin="80 0 0 0" >
                             <ItemsControl.ItemTemplate >
                                 <DataTemplate>
                                         <StackPanel Margin="0,5" Background="#41464646">
@@ -48,7 +50,7 @@
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
                                             <TextBlock Margin="4,5,4,0" Grid.Row="0" Text="{Binding CommentAdditionTime}" FontSize="12" Opacity="0.7"/>
-                                            <TextBlock Margin="4,5,4,0" Grid.Row="1" Text="xmjaso00" FontSize="12" Opacity="0.7"/>
+                                            <TextBlock Margin="4,5,4,0" Grid.Row="1" Text="{Binding User.Email}" FontSize="12" Opacity="0.7"/>
                                         </Grid>
                                         <Grid Margin="0 10 0 0">
                                             <Grid.ColumnDefinitions>
@@ -56,7 +58,7 @@
                                                 <ColumnDefinition/>
                                             </Grid.ColumnDefinitions>
                                             <Button Content="Show Author" Grid.Column="0" />
-                                            <Button Content="Delete Comment" Grid.Column="1"/>
+                                            <Button Content="Delete Comment" Grid.Column="1" Foreground="Red"/>
                                         </Grid>
                                     </StackPanel>
 
